src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>ATA_Count__c</fullName>
        <label>ATA Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.ATA__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>notEqual</operation>
            <value>Machine Care, Pick-Up/Drop Off, Pre-Visit Installation, After-Visit Installation, Assistance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ATA_Earliest__c</fullName>
        <label>ATA Earliest</label>
        <summarizedField>WorkOrderLineItem.ATA__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.ATA__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ATA_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATA Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Duration__c</fullName>
        <inlineHelpText>Duration in hours</inlineHelpText>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AddOptionCount__c</fullName>
        <label>Add Option Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.AddOption__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.OptionDeliveredbyLSP__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AssetLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>WorkOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <formula>IF(
	TIMEVALUE(ETA_Earliest__c) &gt;= TIMEVALUE(&quot;00:00:00.000&quot;) &amp;&amp; TIMEVALUE(ETA_Earliest__c) &lt;= TIMEVALUE(&quot;12:00:00.000&quot;), 
	&apos;08:00 - 12:00&apos;,
	&apos;12:00 - 16:00&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Block</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CATSProfile4DigCode__c</fullName>
        <label>CATS-Profile (4 dig code)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <formula>Case.CaseNumber</formula>
        <label>CaseNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SignatureClosing__c</fullName>
        <formula>Case.SignatureClosing__c</formula>
        <label>Case SignatureClosing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SignatureCountryWebAddress__c</fullName>
        <formula>Case.SignatureCountryWebAddress__c</formula>
        <label>Case SignatureCountryWebAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SignatureDepartmentEmail__c</fullName>
        <formula>Case.SignatureDepartmentEmail__c</formula>
        <label>Case SignatureDepartmentEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SignatureDepartmentPhone__c</fullName>
        <formula>Case.SignatureDepartmentPhone__c</formula>
        <label>Case SignatureDepartmentPhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SignatureLegalEntity__c</fullName>
        <formula>Case.SignatureLegalEntity__c</formula>
        <label>Case SignatureLegalEntity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SignatureTitle__c</fullName>
        <formula>Case.Signature_Title__c</formula>
        <label>Case SignatureTitle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subtype__c</fullName>
        <formula>TEXT(Case.SubType__c)</formula>
        <label>Case Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoffeeIsRunning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the coffee is running after (initial) repair</description>
        <label>Coffee is running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <label>Company Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <description>Complaint communicated by the customer</description>
        <label>Complaint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPreferredLanguage__c</fullName>
        <description>Use in Flow to Send out the right ETA and ATA template. this field is stamped by the flow so it will have to remain hidden from the page layout.</description>
        <label>Contact Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EN</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>SAP_NL</fullName>
                    <label>Dutch</label>
                </value>
                <value>
                    <fullName>SAP_FR</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>SAP_NO</fullName>
                    <label>Norwegian</label>
                </value>
                <value>
                    <fullName>SAP_DA</fullName>
                    <label>Danish</label>
                </value>
                <value>
                    <fullName>SAP_SV</fullName>
                    <label>Swedish</label>
                </value>
                <value>
                    <fullName>SAP_SR</fullName>
                    <label>Serbian</label>
                </value>
                <value>
                    <fullName>SAP_ZH</fullName>
                    <label>Chinese</label>
                </value>
                <value>
                    <fullName>SAP_TH</fullName>
                    <label>Thai</label>
                </value>
                <value>
                    <fullName>SAP_KO</fullName>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>SAP_RO</fullName>
                    <label>Romanian</label>
                </value>
                <value>
                    <fullName>SAP_SL</fullName>
                    <label>Slovenian</label>
                </value>
                <value>
                    <fullName>SAP_HR</fullName>
                    <label>Croatian</label>
                </value>
                <value>
                    <fullName>SAP_MS</fullName>
                    <label>Malaysian</label>
                </value>
                <value>
                    <fullName>SAP_UK</fullName>
                    <label>Ukrainian</label>
                </value>
                <value>
                    <fullName>SAP_ET</fullName>
                    <label>Estonian</label>
                </value>
                <value>
                    <fullName>SAP_AR</fullName>
                    <label>Arabic</label>
                </value>
                <value>
                    <fullName>SAP_HE</fullName>
                    <label>Hebrew</label>
                </value>
                <value>
                    <fullName>SAP_CS</fullName>
                    <label>Czech</label>
                </value>
                <value>
                    <fullName>SAP_DE</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>SAP_EL</fullName>
                    <label>Greek</label>
                </value>
                <value>
                    <fullName>SAP_HU</fullName>
                    <label>Hungarian</label>
                </value>
                <value>
                    <fullName>SAP_IT</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>SAP_JA</fullName>
                    <label>Japanese</label>
                </value>
                <value>
                    <fullName>SAP_PL</fullName>
                    <label>Polish</label>
                </value>
                <value>
                    <fullName>SAP_ZF</fullName>
                    <label>Chinese trad.</label>
                </value>
                <value>
                    <fullName>SAP_PT</fullName>
                    <label>Portuguese</label>
                </value>
                <value>
                    <fullName>SAP_SK</fullName>
                    <label>Slovakian</label>
                </value>
                <value>
                    <fullName>SAP_RU</fullName>
                    <label>Russian</label>
                </value>
                <value>
                    <fullName>SAP_ES</fullName>
                    <label>Spanish</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactSetting__c</fullName>
        <description>Checks whether A linked Case and its Contact is there with correct E-Mail Preference used for ETA and ATA notification.</description>
        <formula>Case.Contact_EMail_setting__c= TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Lastname__c</fullName>
        <formula>Contact.LastName</formula>
        <label>Contact Lastname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Salutation__c</fullName>
        <formula>TEXT(Contact.Salutation)</formula>
        <label>Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <label>Cost Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delayed_fulfillment_block_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delayed fulfillment block email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DescriptionOfSFDCOrder__c</fullName>
        <label>Description of SFDC Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA_Earliest__c</fullName>
        <label>ETA Earliest</label>
        <summarizedField>WorkOrderLineItem.ETA__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.ETA__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ETA_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETA Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ETA_WOLI_count__c</fullName>
        <label>ETA WOLI count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.ETA__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>notEqual</operation>
            <value>Machine Care, Pick-Up/Drop Off, Pre-Visit Installation, After-Visit Installation, Assistance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ETA_date_same_as_SLA__c</fullName>
        <formula>IF(DATEVALUE(ETA_Earliest__c) == DATEVALUE(Case.SLADate__c), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETA date same as SLA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EarliestAppointmentTime__c</fullName>
        <description>Appointment Finish agreed with customer</description>
        <label>Earliest Appointment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Early_Start_Date__c</fullName>
        <label>Early Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enabled_Survey_in_Click__c</fullName>
        <label>Enabled Survey in Click</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Actual End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExecutingEngineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executing Engineer</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>WorkOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FaultConfiguration__c</fullName>
        <description>Defines the faults</description>
        <label>Fault Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Option 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstScheduledDate__c</fullName>
        <formula>NOW() - MAX( 
IF(ISBLANK(S40_Scheduled_Date__c), 0,(NOW() - S40_Scheduled_Date__c)), 
IF(ISBLANK(S41ScheduledDate__c), 0,(NOW() - S41ScheduledDate__c)), 
IF(ISBLANK(S43ScheduledDate__c), 0,(NOW() - S43ScheduledDate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fulfillment_block_Conf_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to block sending multiple block confirmation emails</description>
        <label>Fulfillment block Conf. email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_date_conf_S40_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to block sending multiple fulfillment date confirmation emails.</description>
        <label>Fulfillment date conf S40 email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_date_conf_S41_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfillment date conf S41 email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_date_conf_S43_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfillment date conf S43 email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_summary_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfillment summary email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_time_confirmation_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfillment time confirmation email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_created_WOLI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To show if WOLI has been created from WO automated process.</description>
        <inlineHelpText>To show if WOLI has been created from WO automated process.</inlineHelpText>
        <label>Has created WOLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludesWorkshopActivity__c</fullName>
        <label>Includes Workshop Activity</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>equals</operation>
            <value>Installation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkshopActivity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Includes_Plug_Play__c</fullName>
        <label>Includes Plug &amp; Play</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>equals</operation>
            <value>Installation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Plug_Play__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Includes_Round_Trip__c</fullName>
        <description>Indicates if the work order contains a plug and play or workshop activity</description>
        <formula>S40TotalCount__c + S41TotalCount__c + S43TotalCount__c = PlannedRoundTripCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Round Trip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCaseSLAwithintheblock__c</fullName>
        <formula>IF(
	Block__c = &apos;08:00 - 12:00&apos;,
	IF((TIMEVALUE(Case.SLADate__c) &gt;= TIMEVALUE(&quot;00:00:00.000&quot;) &amp;&amp; TIMEVALUE(Case.SLADate__c) &lt;= TIMEVALUE(&quot;12:00:00.000&quot;)),
		true,
		false),
	IF(Block__c = &apos;12:00 - 16:00&apos; &amp;&amp; (TIMEVALUE(Case.SLADate__c) &gt;= TIMEVALUE(&quot;12:00:00.000&quot;) &amp;&amp; TIMEVALUE(Case.SLADate__c) &lt;= TIMEVALUE(&quot;23:59:59.000&quot;)),
		true,
		false)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Case SLA within the block?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if work order is a project</description>
        <label>Is a Project?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSPDeliveryDateCalculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LSP Delivery Date Calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSPPickupDateCalculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LSP Pick-up Date Calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSPScheduleDate__c</fullName>
        <formula>Case.LSPScheduleDate__c - (1/24)</formula>
        <label>LSP Schedule Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoadID__c</fullName>
        <description>This field indicates the unique ID of the line item. This will need to be pre-fixed field with WO-{18 digit ID Work Order Trigger ID off the Installation Header record)</description>
        <externalId>true</externalId>
        <label>Load ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Service_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Service Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_WOLI_Count__c</fullName>
        <label>Manual WOLI Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>notEqual</operation>
            <value>Pick-Up/Drop Off, Pre-Visit Installation, After-Visit Installation, Assistance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.ScheduleManually__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MovementType__c</fullName>
        <label>Movement Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPG_Source__c</fullName>
        <description>indicator where the OPG task was created</description>
        <label>OPG Source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_CancelationReasonCustomer__c</fullName>
        <label>Cancelation Reason (Customer)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Customer Closed</fullName>
                </value>
                <value>
                    <fullName>EoD Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OP_Physical_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physical Asset</label>
        <referenceTo>PhysicalAsset__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <formula>Case.ApptusOrder__r.APTS_Name__c</formula>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlannedRoundTripCount__c</fullName>
        <label>Planned Round Trip Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>equals</operation>
            <value>Installation, De-Installation, Configuration Change</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.RoundTrip__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Planned_Delivery_Date__c</fullName>
        <formula>Case.PlannedDeliveryDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Duration__c</fullName>
        <inlineHelpText>Duration in hours</inlineHelpText>
        <label>Planned Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Operator</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Work Orders (Preferred Operator)</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <label>Project ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepeatVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if task is a return visit</description>
        <label>Repeat Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required Operator</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Work Orders (Required_Operator__c)</relationshipLabel>
        <relationshipName>Work_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequiresLSPCount__c</fullName>
        <label>Requires LSP Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.RequiresLSP__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RequiresLSP__c</fullName>
        <formula>OR(
RequiresLSPCount__c &gt; 0,
AddOptionCount__c &gt; 0,
ReturnProductCount__c &gt; 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires LSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResponsibleTeam__c</fullName>
        <label>Responsible Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnProductCount__c</fullName>
        <label>Return Product Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.ReturnProduct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Route_Id__c</fullName>
        <label>Route Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Name__c</fullName>
        <label>Route Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Number__c</fullName>
        <label>Route Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S30NoticeCouint__c</fullName>
        <label>S30 Notice Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>equals</operation>
            <value>Preventive Maintenance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>S30TotalCount__c</fullName>
        <label>S30 Total Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>equals</operation>
            <value>Preventive Maintenance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>S32NoticeCount__c</fullName>
        <label>S32 Notice Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>equals</operation>
            <value>Water Filter Change</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>S32TotalCount__c</fullName>
        <label>S32 Total Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>equals</operation>
            <value>Water Filter Change</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>